--- a/header.html
+++ b/header.html
@@ -8,7 +8,31 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="container">qwe</header>
+      <header class="header">
+        <div class="header__content">
+          <div class="header__logo">
+            <img src="assets/img/logo.png" alt="logo" />
+          </div>
+          <ul class="header__nav">
+            <li class="header__nav-item">
+              <span>Market</span><img src="/assets/img/arrow.svg" alt="" />
+            </li>
+            <li class="header__nav-item">
+              <span>Market</span><img src="/assets/img/arrow.svg" alt="" />
+            </li>
+            <li class="header__nav-item">
+              <span>Market</span><img src="/assets/img/arrow.svg" alt="" />
+            </li>
+            <li class="header__nav-item">
+              <span>Market</span><img src="/assets/img/arrow.svg" alt="" />
+            </li>
+            <li class="header__nav-item">
+              <span>Market</span><img src="/assets/img/arrow.svg" alt="" />
+            </li>
+          </ul>
+          <button class="header__logIn">Log In</button>
+        </div>
+      </header>
     </div>
   </body>
 </html>
