--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
-    <my-footer />
+    <my-footer class="footer" />
   </body>
 </html>
