--- a/header.html
+++ b/header.html
@@ -30,7 +30,10 @@
               <span>Career</span>
             </li>
           </ul>
-          <button class="header__logIn" id="loginBtn">Log In</button>
+          <div class="header__end">
+            <button class="header__logIn" id="loginBtn">Log In</button>
+            <img class="header__menuIcon" src="/assets/icons/Menu.svg" alt="" />
+          </div>
         </div>
       </header>
       <div id="myModal" class="modal">
