--- a/banner.html
+++ b/banner.html
@@ -1,37 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/index.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="banner">
-        <div class="banner__content">
-          <div class="banner__content-text">
-            <span class="banner__content-tag">Crypto Brains</span>
-            <div class="banner__content-title">
-              Buy & Sell Crypto Easy With Crypto Brains
-            </div>
+<link rel="stylesheet" href="/assets/css/index.css" />
 
-            <hr class="banner__content-line" />
-
-            <p class="banner__content-desc">
-              It is a long established fact that a reader will be distracted by
-              the readable content of a page when looking at its layout.
-            </p>
-
-            <div class="banner__content-buttons">
-              <button class="button button--arrow market__button">
-                Start Now
-              </button>
-            </div>
-          </div>
+<div class="wrapper">
+  <div class="banner">
+    <div class="banner__content">
+      <div class="banner__content-text">
+        <span class="banner__content-tag">Crypto Brains</span>
+        <div class="banner__content-title">
+          Buy & Sell Crypto Easy With Crypto Brains
         </div>
-        <div class="banner__market"></div>
+
+        <hr class="banner__content-line" />
+
+        <p class="banner__content-desc">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+
+        <div class="banner__content-buttons">
+          <button class="market__button">Start Now</button>
+          <button class="button--transparent">Beginner’s Guide</button>
+        </div>
       </div>
+      <img src="assets/img/comp.png" class="banner__content-img" />
     </div>
-  </body>
-</html>
+    <ul class="banner__market">
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+      <li class="banner__market-item">
+        <div class="banner__market-heading">
+          BTC / INR
+          <span>
+            <img src="/assets/icons/ArrowTop.svg" />
+            5.76%
+          </span>
+        </div>
+
+        ₹ 28,214,25.341
+      </li>
+      <hr class="vertical" />
+    </ul>
+  </div>
+</div>
