--- a/index.html
+++ b/index.html
@@ -815,6 +815,14 @@
           el: ".swiper-pagination",
           clickable: true,
         },
+        breakpoints: {
+          768: {
+            slidesPerView: 2,
+          },
+          375: {
+            slidesPerView: 1,
+          },
+        },
       });
     </script>
 
