--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="assets/js/app.js"></script>
+    <title>3 Работа</title>
     <link rel="stylesheet" href="assets/css/index.css" />
     <link
       rel="stylesheet"
